# pathleakage_privacy

./: .gitignore  .gitmodules  README.md
code/: .gitignore  .sanity_linking.py.swp  .~lock.multi_protocol.csv#  Makefile  Questions_readme.md  README.md  aggregation.py  baseline.csv  baseline_lte_.csv  baseline_random_lte.csv  baseline_random_wifi.csv  baseline_wifi_.csv  display_traces.ipynb  env.py  fn.c  group.py  group_checker.py  group_parallel.py  linked_ids.json  main.py  manager.pkl  multi_protocol.csv  multi_protocol_localization.csv  notes_to_readme.md  pipeline.py  plot_reconstruction.py  plot_reconstruction_257.py  plot_reconstruction_64.py  plot_square.py  privacy_measurement.py  project.yml  pyproject.toml  raw_sniffer_data.py  raw_sniffer_data_parallel.py  raw_user_data.py  reconstruction.py  reconstruction_baseline.py  reconstruction_baseline_257.py  reconstruction_baseline_512.py  reconstruction_baseline_64.py  (+82 more)
code/analysis/: heatmap.py  mix_zone.py  mixzone_duration.py  polygon_points.py  push_to_mongo.py  sanity.py
code/configs/: q3_localization_error_high.yml  q3_localization_error_low.yml  q4_mobility_512_sumo_1-5_LB.yml  q4_mobility_512_sumo_10_LB.yml  q4_mobility_512_sumo_3_LB.yml  q4_mobility_512_sumo_5_LB.yml  scenario_ble_range_512_sumo.yml  scenario_exponential_1024_graph_LB.yml  scenario_exponential_1024_sumo_BW.yml  scenario_exponential_1024_sumo_LB.yml  scenario_exponential_1024_sumo_LW.yml  scenario_exponential_1024_sumo_all.yml  scenario_exponential_1536_graph_LB.yml  scenario_exponential_1536_sumo_BW.yml  scenario_graph.yml  (+55 more)
(+323 files in other folders)
