[tool.poetry]
name = "privacy_analysis"
version = "0.1.0"
description = ""
authors = ["mihirraj dixit <dixitmn6@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
libsumo = "^1.20.0"
shapely = "^2.0.4"
orjson = "^3.10.4"
polars = "^0.20.31"
pandas = "^2.2.2"
numpy = "^1.26.4"
scipy = "^1.13.1"
pymongo = "^4.7.3"
loguru = "^0.7.2"
matplotlib = "^3.9.0"
PyYAML = "^6.0.1"
invoke = "^2.2.0"
pyshark = "^0.6"
seaborn = "^0.13.2"
networkx = "^3.4.2"
tk = "^0.1.0"
tqdm = "^4.67.1"
pyarrow = "^18.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
